...

                <TextView
                  android:id="@+id/email_SimpleUserProfile_textView"
                  android:textStyle="bold"
                  android:layout_width="match_parent"
...

                <TextView
                  android:id="@+id/emailText_SimpleUserProfile_textView"
                  android:textStyle="bold"
                  android:layout_width="match_parent"
...

                <de.hdodenhof.circleimageview.CircleImageView
                  android:id="@+id/profilePicture_SimpleUserProfile_imageView"
                  android:layout_width="160dp"
                  android:layout_height="160dp"
                  android:layout_gravity="start"
                  android:clickable="false"
                  android:contentDescription="profile picture"
                  android:contextClickable="false"
                  app:layout_constraintBottom_toBottomOf="parent"
...
                  tools:ignore="HardcodedText" />
                <TextView
                  android:id="@+id/uniAccountClaimer_SimpleUserProfile_textView"
                  android:textStyle="bold"
                  android:layout_width="match_parent"
...

            <LinearLayout
              android:id="@+id/attributes_SimpleUserProfile_layout"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
...

                <LinearLayout
                  android:id="@+id/name_SimpleUserProfile_layout"
                  android:layout_width="match_parent"
                  android:layout_height="50dp"
...

                    <TextView
                      android:id="@+id/name_SimpleUserProfile_textView"
                      android:layout_width="wrap_content"
                      android:layout_height="match_parent"
...

                    <com.google.android.material.textfield.TextInputEditText
                      android:id="@+id/name_SimpleUserProfile_editText"
                      android:textStyle="bold"
                      android:layout_width="match_parent"
...

                <LinearLayout
                  android:id="@+id/age_SimpleUserProfile_layout"
                  android:layout_width="match_parent"
                  android:layout_height="50dp"
...

                    <TextView
                      android:id="@+id/age_SimpleUserProfile_textView"
                      android:layout_width="wrap_content"
                      android:layout_height="match_parent"
...

                    <com.google.android.material.textfield.TextInputEditText
                      android:id="@+id/age_SimpleUserProfile_editText"
                      android:textStyle="bold"
                      android:layout_width="match_parent"
...

                <LinearLayout
                  android:id="@+id/phoneNumber_SimpleUserProfile_layout"
                  android:layout_width="match_parent"
                  android:layout_height="50dp"
...

                    <TextView
                      android:id="@+id/phoneNumber_SimpleUserProfile_textView"
                      android:layout_width="wrap_content"
                      android:layout_height="match_parent"
...
                      android:textAlignment="viewStart"
                      android:textSize="16sp"
                      app:layout_constraintEnd_toStartOf="@+id/phoneNumber_SimpleUserProfile_editText"
                      app:layout_constraintHorizontal_bias="0.0"
                      app:layout_constraintStart_toStartOf="parent"
...

                <LinearLayout
                  android:id="@+id/gender_SimpleUserProfile_layout"
                  android:layout_width="match_parent"
                  android:layout_height="50dp"
...

                    <TextView
                      android:id="@+id/gender_SimpleUserProfile_textView"
                      android:layout_width="wrap_content"
                      android:layout_height="match_parent"
...

                    <com.google.android.material.textfield.TextInputEditText
                      android:id="@+id/gender_SimpleUserProfile_editText"
                      android:textStyle="bold"
                      android:layout_width="0dp"
...

                <Button
                  android:id="@+id/contact_SimpleUserProfile_button"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
...
