<resources>
    <string name="Address">Address</string>
    <string name="Price">Price</string>
    <string name="app_name">AppArt</string>
    <string name="action_settings">Settings</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>

    <string name="email_reset">Enter your email address</string>
    <string name="reset_button">Reset password</string>
    <string name="login_failed_snack">Login failed !</string>
    <string name="saveUserFail_Login">Failed to auto-save user, please log in again</string>
...
    <string name="vtourbutton_text">Virtual Tour</string>
    <string name="address">Address:</string>
    <string name="default_loading">loading…</string>
    <string name="price">Price:</string>
    <string name="description">Description:</string>
    <string name="user">Advertiser:</string>
    <string name="contactbutton_text">Contact</string>
    <string name="seeLocationText">Location</string>
    <string name="seeNearbyPlacesText">Nearby places</string>
    <string name="intentLocationForMap">LOCATION</string>
    <string name="loadFail_Ad">Failed to load the ad, please retry later</string>
    <string name="favFail_Ad">Failed to add to favorites, please retry later</string>
    <string name="localFavFail_Ad">Failed to save the new favorite locally</string>
...
