...

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <Button
              android:id="@+id/contact_info_Ad_button"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginBottom="16dp"
              android:layout_marginStart="@dimen/margin_button"
              android:layout_marginEnd="@dimen/margin_button"
              android:paddingStart="40dp"
...
